[gd_scene load_steps=15 format=3 uid="uid://b710vf2myuyey"]

[ext_resource type="Script" path="res://src/enemy.gd" id="1_e8s81"]
[ext_resource type="Texture2D" uid="uid://cv3p403x8vmje" path="res://assets/sprites/slime_green.png" id="1_qx0s3"]
[ext_resource type="AudioStream" uid="uid://okfx0pkjn0ge" path="res://assets/sounds/hurt.wav" id="3_tf3f2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vo781"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7nkqq"]
atlas = ExtResource("1_qx0s3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4qin"]
atlas = ExtResource("1_qx0s3")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_68te6"]
atlas = ExtResource("1_qx0s3")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4gm4"]
atlas = ExtResource("1_qx0s3")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_i7q7s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nkqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4qin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68te6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4gm4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_lnrhx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tjw6d"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bonny"]
_data = {
"RESET": SubResource("Animation_lnrhx"),
"idle": SubResource("Animation_tjw6d")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vb2w0"]
size = Vector2(14, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nopdr"]
size = Vector2(110, 48)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_e8s81")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(0.794075, 0.794075)
shape = SubResource("CircleShape2D_vo781")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i7q7s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bonny")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_vb2w0")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_nopdr")
debug_color = Color(0.9606, 0, 0.515117, 0.42)

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tf3f2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="finished" from="DeathSound" to="." method="_on_death_sound_finished"]
